add ne gestione documenttype
