# src/main/java/it/pagopa/pnss/repositorymanager/rest/internal/DocumentInternalApiController.java
@@ -1,5 +1,7 @@
 package it.pagopa.pnss.repositorymanager.rest.internal;
 
+import it.pagopa.pn.template.internal.rest.v1.dto.*;
+import it.pagopa.pn.template.internal.rest.v1.dto.Error;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -7,10 +9,6 @@ import org.springframework.web.server.ServerWebExchange;
 
 import feign.Logger;
 import it.pagopa.pn.template.internal.rest.v1.api.DocumentInternalApi;
-import it.pagopa.pn.template.internal.rest.v1.dto.Document;
-import it.pagopa.pn.template.internal.rest.v1.dto.DocumentChanges;
-import it.pagopa.pn.template.internal.rest.v1.dto.DocumentResponse;
-import it.pagopa.pn.template.internal.rest.v1.dto.Error;
 import it.pagopa.pnss.common.client.exception.DocumentKeyNotPresentException;
 import it.pagopa.pnss.repositorymanager.exception.ItemAlreadyPresent;
 import it.pagopa.pnss.repositorymanager.exception.RepositoryManagerException;
@@ -83,7 +81,7 @@ public class DocumentInternalApiController implements DocumentInternalApi {
     }
 
     @Override
-    public Mono<ResponseEntity<DocumentResponse>> insertDocument(Mono<Document> document, final ServerWebExchange exchange) {
+    public Mono<ResponseEntity<DocumentResponse>> insertDocument(Mono<DocumentInput> document, final ServerWebExchange exchange) {
 
         return document.flatMap(documentService::insertDocument)
                        .map(documentOutput -> ResponseEntity.ok(getResponse(documentOutput)))
